@@ -1,5 +1,13 @@
 2007-02-06  Brian Warner  <warner@lothar.com>
 
+	* contrib/bb_applet.py (MyApplet.filled): add a small prefs
+	dialog, to allow you to reset the buildmaster and force
+	connect/disconnect. Correctly handle losing the buildmaster
+	connection (by switching the display to the hexnut, at which point
+	you can use the 'Connect' menu item to reconnect).
+
+2007-02-06  Brian Warner  <warner@lothar.com>
+
 	* buildbot/steps/source.py (Source.start): if we're using a patch,
 	add it as a LogFile to the checkout/update step. This will turn
 	into a link on the waterfall page.
